@@ -37,6 +37,9 @@ log_zeny: 0
 // Log GM Commands (set to minimum level of Logged Commands)
 log_gm: 40
 
+// Log NPC 'logmes' commands
+log_npc: 0
+
 
 // Dead Branch Log Table
 log_branch_db: branchlog
@@ -65,32 +68,38 @@ log_vend_db: vendlog
 // GM Log Table
 log_gm_db: atcommandlog
 
+// NPC Log Table
+log_npc_db: npclog
+
 
 // Dead Branch Log File
-log_branch: log/branchlog.log
+log_branch_file: log/branchlog.log
 
 // Drop Log File
-log_drop: log/droplog.log
+log_drop_file: log/droplog.log
 
 // MVP Drop File
-log_mvpdrop: log/mvplog.log
+log_mvpdrop_file: log/mvplog.log
 
 // Present Drop File
-log_present: log/presentlog.log
+log_present_file: log/presentlog.log
 
 // Produce Log File
-log_produce: log/producelog.log
+log_produce_file: log/producelog.log
 
 // Refine Log File
-log_refine: log/refinelog.log
+log_refine_file: log/refinelog.log
 
 // Trade Log File
-log_trade: log/tradelog.log
+log_trade_file: log/tradelog.log
 
 // Vend Log File
-log_vend: log/vendlog.log
+log_vend_file: log/vendlog.log
 
 // GM Log File
-log_gm: log/atcommandlog.log
+log_gm_file: log/atcommandlog.log
+
+// NPC Log File
+log_npc_file: log/npclog.log
 
 import: conf/import/log_conf.txt
